[package]
name = "interview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
csv = "1.3.0"
lazy_static = "1.4.0"
rust_decimal = "1.33.1"
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
insta = "1.35.1"
tempfile = "3.10.0"
